HW1/1
hw1.cpp: In function ‘int main(int, char**)’:
hw1.cpp:40:7: warning: variable ‘CLIRegex’ set but not used [-Wunused-but-set-variable]
   40 |  bool CLIRegex = 0;
      |       ^~~~~~~~
hw1.cpp:41:7: warning: variable ‘typeFilter’ set but not used [-Wunused-but-set-variable]
   41 |  bool typeFilter = 0;
      |       ^~~~~~~~~~
hw1.cpp:42:7: warning: variable ‘fileFilter’ set but not used [-Wunused-but-set-variable]
   42 |  bool fileFilter = 0;
      |       ^~~~~~~~~~
hw1.cpp: In function ‘std::string getProcData(std::string)’:
hw1.cpp:114:25: error: no matching function for call to ‘regex_search(char [1024], std::__cxx11::smatch&, std::__cxx11::regex&)’
  114 |  regex_search(buffer,m,e);
      |                         ^
In file included from /usr/include/c++/9/regex:62,
                 from hw1.cpp:20:
/usr/include/c++/9/bits/regex.h:2217:5: note: candidate: ‘template<class _Bi_iter, class _Alloc, class _Ch_type, class _Rx_traits> bool std::regex_search(_Bi_iter, _Bi_iter, std::__cxx11::match_results<_BiIter, _Alloc>&, const std::__cxx11::basic_regex<_CharT, _TraitsT>&, std::regex_constants::match_flag_type)’
 2217 |     regex_search(_Bi_iter __s, _Bi_iter __e,
      |     ^~~~~~~~~~~~
/usr/include/c++/9/bits/regex.h:2217:5: note:   template argument deduction/substitution failed:
hw1.cpp:114:25: note:   deduced conflicting types for parameter ‘_Bi_iter’ (‘char*’ and ‘std::__cxx11::match_results<__gnu_cxx::__normal_iterator<const char*, std::__cxx11::basic_string<char> > >’)
  114 |  regex_search(buffer,m,e);
      |                         ^
In file included from /usr/include/c++/9/regex:62,
                 from hw1.cpp:20:
/usr/include/c++/9/bits/regex.h:2241:5: note: candidate: ‘template<class _Bi_iter, class _Ch_type, class _Rx_traits> bool std::regex_search(_Bi_iter, _Bi_iter, const std::__cxx11::basic_regex<_Ch_type, _Rx_traits>&, std::regex_constants::match_flag_type)’
 2241 |     regex_search(_Bi_iter __first, _Bi_iter __last,
      |     ^~~~~~~~~~~~
/usr/include/c++/9/bits/regex.h:2241:5: note:   template argument deduction/substitution failed:
hw1.cpp:114:25: note:   deduced conflicting types for parameter ‘_Bi_iter’ (‘char*’ and ‘std::__cxx11::match_results<__gnu_cxx::__normal_iterator<const char*, std::__cxx11::basic_string<char> > >’)
  114 |  regex_search(buffer,m,e);
      |                         ^
In file included from /usr/include/c++/9/regex:62,
                 from hw1.cpp:20:
/usr/include/c++/9/bits/regex.h:2264:5: note: candidate: ‘template<class _Ch_type, class _Alloc, class _Rx_traits> bool std::regex_search(const _Ch_type*, std::__cxx11::match_results<const _Ch_type*, _Alloc>&, const std::__cxx11::basic_regex<_Ch_type, _Rx_traits>&, std::regex_constants::match_flag_type)’
 2264 |     regex_search(const _Ch_type* __s,
      |     ^~~~~~~~~~~~
/usr/include/c++/9/bits/regex.h:2264:5: note:   template argument deduction/substitution failed:
hw1.cpp:114:25: note:   mismatched types ‘const _Ch_type*’ and ‘__gnu_cxx::__normal_iterator<const char*, std::__cxx11::basic_string<char> >’
  114 |  regex_search(buffer,m,e);
      |                         ^
In file included from /usr/include/c++/9/regex:62,
                 from hw1.cpp:20:
/usr/include/c++/9/bits/regex.h:2283:5: note: candidate: ‘template<class _Ch_type, class _Rx_traits> bool std::regex_search(const _Ch_type*, const std::__cxx11::basic_regex<_Ch_type, _Rx_traits>&, std::regex_constants::match_flag_type)’
 2283 |     regex_search(const _Ch_type* __s,
      |     ^~~~~~~~~~~~
/usr/include/c++/9/bits/regex.h:2283:5: note:   template argument deduction/substitution failed:
hw1.cpp:114:25: note:   ‘std::__cxx11::smatch’ {aka ‘std::__cxx11::match_results<__gnu_cxx::__normal_iterator<const char*, std::__cxx11::basic_string<char> > >’} is not derived from ‘const std::__cxx11::basic_regex<_Ch_type, _Rx_traits>’
  114 |  regex_search(buffer,m,e);
      |                         ^
In file included from /usr/include/c++/9/regex:62,
                 from hw1.cpp:20:
/usr/include/c++/9/bits/regex.h:2302:5: note: candidate: ‘template<class _Ch_traits, class _String_allocator, class _Ch_type, class _Rx_traits> bool std::regex_search(const std::__cxx11::basic_string<_Ch_type, _Ch_traits, _Str_allocator>&, const std::__cxx11::basic_regex<_CharT, _TraitsT>&, std::regex_constants::match_flag_type)’
 2302 |     regex_search(const basic_string<_Ch_type, _Ch_traits,
      |     ^~~~~~~~~~~~
/usr/include/c++/9/bits/regex.h:2302:5: note:   template argument deduction/substitution failed:
hw1.cpp:114:25: note:   mismatched types ‘const std::__cxx11::basic_string<_Ch_type, _Ch_traits, _Str_allocator>’ and ‘char [1024]’
  114 |  regex_search(buffer,m,e);
      |                         ^
In file included from /usr/include/c++/9/regex:62,
                 from hw1.cpp:20:
/usr/include/c++/9/bits/regex.h:2325:5: note: candidate: ‘template<class _Ch_traits, class _Ch_alloc, class _Alloc, class _Ch_type, class _Rx_traits> bool std::regex_search(const std::__cxx11::basic_string<_Ch_type, _Ch_traits, _Ch_alloc>&, std::__cxx11::match_results<typename std::__cxx11::basic_string<_Ch_type, _Ch_traits, _Ch_alloc>::const_iterator, _Alloc>&, const std::__cxx11::basic_regex<_Ch_type, _Rx_traits>&, std::regex_constants::match_flag_type)’
 2325 |     regex_search(const basic_string<_Ch_type, _Ch_traits, _Ch_alloc>& __s,
      |     ^~~~~~~~~~~~
/usr/include/c++/9/bits/regex.h:2325:5: note:   template argument deduction/substitution failed:
hw1.cpp:114:25: note:   mismatched types ‘const std::__cxx11::basic_string<_Ch_type, _Ch_traits, _Ch_alloc>’ and ‘char [1024]’
  114 |  regex_search(buffer,m,e);
      |                         ^
In file included from /usr/include/c++/9/regex:62,
                 from hw1.cpp:20:
/usr/include/c++/9/bits/regex.h:2340:5: note: candidate: ‘template<class _Ch_traits, class _Ch_alloc, class _Alloc, class _Ch_type, class _Rx_traits> bool std::regex_search(const std::__cxx11::basic_string<_Ch_type, _Ch_traits, _Ch_alloc>&&, std::__cxx11::match_results<typename std::__cxx11::basic_string<_Ch_type, _Ch_traits, _Ch_alloc>::const_iterator, _Alloc>&, const std::__cxx11::basic_regex<_Ch_type, _Rx_traits>&, std::regex_constants::match_flag_type)’ <deleted>
 2340 |     regex_search(const basic_string<_Ch_type, _Ch_traits, _Ch_alloc>&&,
      |     ^~~~~~~~~~~~
/usr/include/c++/9/bits/regex.h:2340:5: note:   template argument deduction/substitution failed:
hw1.cpp:114:25: note:   mismatched types ‘const std::__cxx11::basic_string<_Ch_type, _Ch_traits, _Ch_alloc>’ and ‘char [1024]’
  114 |  regex_search(buffer,m,e);
      |                         ^
hw1.cpp:116:12: warning: format ‘%s’ expects argument of type ‘char*’, but argument 2 has type ‘std::__cxx11::sub_match<__gnu_cxx::__normal_iterator<const char*, std::__cxx11::basic_string<char> > >’ [-Wformat=]
  116 |   printf("%s\n",x);
      |           ~^    ~
      |            |    |
      |            |    std::__cxx11::sub_match<__gnu_cxx::__normal_iterator<const char*, std::__cxx11::basic_string<char> > >
      |            char*
hw1.cpp:102:7: warning: unused variable ‘command’ [-Wunused-variable]
  102 |  char command[257] = {0};
      |       ^~~~~~~
make: *** [Makefile:7: hw1] Error 1
